--- a/src/main/resources/ConfigurationFiles/StackIt.yml
+++ b/src/main/resources/ConfigurationFiles/StackIt.yml
@@ -31,13 +31,18 @@ StackIt:
     # - MySQL
     database:
         type: "mysql" # Type of connection/database (has to be supported by the plugin)
+        jdbcdriver:
         host: "localhost" # Hostname of the database
-        name: "stackit" # Database name
+        name: "stackit" # DatabaseManager name
         username: "stackit" # Username of the user able to access the database
         password: "stackit" # Password of the user able to access the database.
         port: 3306 # Port for the database access
         prefix: "stackit_" # Prefix put before the tables
-        
+        dao:
+            queue: "org.stackit.database.dao.mysql.QueueElement"
+            purchases: "org.stackit.database.dao.mysql.Purchases"
+            users: "org.stackit.database.dao.mysql.Users"
+
     # Support of multiple language
     internationalization:
         forced: false # Force the use of a language
