--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,7 @@
  author: StackIt
  website: https://www.stackit.org/
  
- main: org.stackit.src.StackIt
+ main: org.stackit.StackIt
  database: true
  
  commands:
