--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,9 @@
  name: StackIt
- version: 1.0
- description: A powerful shop for Minecraft 1.7-1.11
+ version: 2.10
+ description: A powerful API for Minecraft 1.7-1.11
  
  author: StackIt
- website: https://www.stackit.org/
+ website: https://wiki.uphoria.org/stackit/
  
  main: org.stackit.StackIt
  database: true
@@ -12,4 +12,4 @@
      stackit:
          description: StackIt main command.
          usage: /stackit <option>
-         aliases: [st, stack]
+         aliases: [st]
