--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     compile name: 'spark-core-2.5.5'
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+    compile group: 'commons-io', name: 'commons-io', version: '2.4'
 
     compile 'org.apache.logging.log4j:log4j-api:2.7'
     compile 'org.apache.logging.log4j:log4j-core:2.7'
