--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:21.0'
     // Spigot API
-    compileOnly name: 'spigot-1.8'
+    //compileOnly name: 'spigot-1.8'
 
     compileOnly "org.spigotmc:spigot-api:1.8.8-R0.1-SNAPSHOT"
     // JDBI
@@ -69,6 +69,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
 
+    compile group: 'mysql', name: 'mysql-connector-java', version: '6.0.6'
     compile 'org.apache.logging.log4j:log4j-api:2.7'
     compile 'org.apache.logging.log4j:log4j-core:2.7'
     compile 'org.apache.logging.log4j:log4j-1.2-api:2.2'
