Added the command system

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -10,5 +10,5 @@
  commands:
      stackit:
          description: StackIt main command.
-         usage: /stackit <option>
+         usage: /stackit <option> [arguments...]
          aliases: [st]
